# agent-streams

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TOADD.md  agent_streams.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
scripts/: metrics_dashboard.py
tests/: test_claude_runner.py  test_cli.py  test_dashboard.py  test_git_operations.py  test_helpers.py  test_integration.py  test_metrics.py  test_run_loop.py  test_tmux.py
